// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`creates a valid router context > context 1`] = `
{
  "adapter": {
    "onViewSwap": [Function],
    "resolveComponent": [Function],
    "updateRoutingConfiguration": [Function],
  },
  "axios": [Function],
  "hooks": {},
  "memo": {},
  "plugins": [],
  "preloadCache": Map {},
  "responseErrorModals": undefined,
  "routing": undefined,
  "scrollRegions": [],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "url": "https://localhost/",
  "version": "123",
  "view": {
    "component": "my-owo-view",
    "properties": {
      "foo": "bar",
    },
  },
}
`;

exports[`updates the context > base context 1`] = `
{
  "adapter": {
    "onViewSwap": [Function],
    "resolveComponent": [Function],
    "updateRoutingConfiguration": [Function],
  },
  "axios": [Function],
  "hooks": {},
  "memo": {},
  "plugins": [],
  "preloadCache": Map {},
  "responseErrorModals": undefined,
  "routing": undefined,
  "scrollRegions": [],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "url": "https://localhost/",
  "version": "abc123",
  "view": {
    "component": "default.view",
    "properties": {},
  },
}
`;

exports[`updates the context > updated context 1`] = `
{
  "adapter": {
    "onViewSwap": [Function],
    "resolveComponent": [Function],
    "updateRoutingConfiguration": [Function],
  },
  "axios": [Function],
  "hooks": {},
  "memo": {},
  "plugins": [],
  "preloadCache": Map {},
  "responseErrorModals": undefined,
  "routing": undefined,
  "scrollRegions": [],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "url": "https://localhost/foo/bar",
  "version": "new-version-string",
  "view": {
    "component": "default.view",
    "properties": {},
  },
}
`;

exports[`updates the context > updated context with dialog 1`] = `
{
  "adapter": {
    "onViewSwap": [Function],
    "resolveComponent": [Function],
    "updateRoutingConfiguration": [Function],
  },
  "axios": [Function],
  "dialog": {
    "baseUrl": "https://base.test",
    "component": "some.dialog",
    "key": "abc",
    "properties": {
      "foo": "bar",
    },
    "redirectUrl": "https://base.test/dialog",
  },
  "hooks": {},
  "memo": {},
  "plugins": [],
  "preloadCache": Map {},
  "responseErrorModals": undefined,
  "routing": undefined,
  "scrollRegions": [],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "url": "https://localhost/foo/bar/dialog",
  "version": "new-version-string",
  "view": {
    "component": "default.view",
    "properties": {},
  },
}
`;

exports[`updates the context > updated context with no dialog 1`] = `
{
  "adapter": {
    "onViewSwap": [Function],
    "resolveComponent": [Function],
    "updateRoutingConfiguration": [Function],
  },
  "axios": [Function],
  "dialog": undefined,
  "hooks": {},
  "memo": {},
  "plugins": [],
  "preloadCache": Map {},
  "responseErrorModals": undefined,
  "routing": undefined,
  "scrollRegions": [],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "url": "https://localhost/foo",
  "version": "new-version-string",
  "view": {
    "component": "default.view",
    "properties": {},
  },
}
`;
